# pgstudio

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  migration.rs
src-tauri/src/ai/: cloud_api.rs  context.rs  mod.rs
src-tauri/src/db/: connection.rs  introspection.rs  mod.rs  query.rs
src-tauri/src/storage/: local_db.rs  mod.rs
src/components/editor/: SQLEditor.tsx  ai-complete.ts
src/components/layout/: ObjectTreeSidebar.tsx  Sidebar.tsx  StatusBar.tsx  TopBar.tsx
src/components/table/: DataGrid.tsx
src/lib/: models.ts  tauri.ts
src/stores/: ai-store.ts  connection-store.ts
src/views/: AISettingsView.tsx  AIView.tsx  ConnectionView.tsx  HistoryView.tsx  HomeView.tsx  MigrationView.tsx  OnboardingView.tsx  SQLEditorView.tsx  SavedQueriesView.tsx  SchemaView.tsx  TableEditorView.tsx
