[package]
name = "pgstudio"
version = "0.1.0"
description = "AI-native PostgreSQL desktop client"
authors = [""]
edition = "2021"

[lib]
name = "pgstudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }
postgres-types = { version = "0.2", features = ["derive"] }
native-tls = "0.2"
postgres-native-tls = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
anyhow = "1"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
